# Rustracer

./: Cargo.toml  README.md
src/: color.rs  egui_utils.rs  main.rs  math.rs  renderer.rs  rustracer.rs  scene.rs  types.rs
src/color/: mod.rs  rgb.rs  rgba.rs
src/raytracer/: lightray.rs  mod.rs
src/raytracer/raycast/: mod.rs  plane.rs  sphere.rs
src/scene/: light.rs  mod.rs  object.rs  surface.rs
